--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://Arman:9991.arm@cluster0.xqjtm.mongodb.net/UserList?retryWrites=true&w=majority
+MONGODB_URL = myMongoDb
 
 ACCESS_TOKEN_SECRET = myaccesstokensecret
 REFRESH_TOKEN_SECRET = myrefreshtokensecre
